# AlphaDiablo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  build.sh  pyproject.toml  交接总结-2026-07-05.md
.github/workflows/: ci.yml
docs/: AUTOPSY-v26-宽度病.md  COURT-wf_5fa772de.md  DESIGN.md  FORENSICS-神之一手.md  PREREG-v23.md  PREREG-v24.md  PREREG-v25.md  PREREG-v26.md  PREREG-v28.md  PREREG-v29.md  PREREG-v30.md  ROADMAP-完全体.md
docs/assets/: window_econ_v23_probe.json
patches/: 0001-headless-town-gfx-fallback.patch  0002-headless-rhino-missile-anim.patch  0003-headless-sfx-length-null.patch
python/diablogym/: __init__.py  env.py  nav.py  options_env.py  worker_env.py
src/: diablogym.cpp
tests/: _asset_probe.py  _piece_probe.py  _reset_probe.py  descend_seed_test.py  smoke_random_agent.py  test_leash.py  test_options_env.py  test_worker_env.py
train/: bc_flat.py  bc_manager.py  bc_worker.py  check_teacher_parity.py  dashboard.py  eval_assembled.py  evaluate.py  evaluate_deep.py  evaluate_options.py  export_manager_npz.py  export_manager_sd.py  export_worker_npz.py  leaderboard-deep.md  leaderboard-hier.md  leaderboard.md  leashed_ppo.py  models.py  plot_figures.py  probe_options.py  run_v24_legs.py  run_v25_election.py  run_v26_legs.py  run_v27_legs.py  run_v28_legs.py  run_v29_relection.py  run_v30_relay.py  run_v30_verdict.py  train_ppo.py
train/models/v22-h-manager/: MODEL_CARD.md  policy.npz  policy_full_sd.pt
train/models/v23-worker-1M/: MODEL_CARD.md  sentinel.jsonl
train/models/v24-worker-leg7/: MODEL_CARD.md  gate_ledger.jsonl  policy.npz
train/models/v28-worker-leg1/: MODEL_CARD.md  policy.npz
train/runs/eval-assembled/: G2-4M.json  G3-1M-full.json  H7-baseline.json  alarm-2M.json  screen-1000000.json  screen-1500000.json  screen-500000.json  v23-golden.json  v24-G3-leg4.json  v24-golden.json  v24-leg3.json  v24-leg5.json  v24-leg6.json  v24-leg7.json  v24-leg8.json  v25-GA0.json  v25-mfresh-full32.json  v25-mfresh-s16.json  v25-mwarm-full32.json  v25-mwarm-s16.json  v26-G3-leg5.json  v26-G3-leg6.json  v27-G3-leg5.json  v27-G3-leg7.json
