[project]
name = "diablogym"
version = "0.1.0"
description = "AlphaDiablo: a fast, deterministic Diablo I reinforcement-learning environment built on DevilutionX (headless, 20000x realtime)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lawrence Grey" }]
keywords = ["reinforcement-learning", "gymnasium", "diablo", "devilutionx", "game-ai"]

dependencies = [
  "numpy>=2.0",
  "gymnasium>=1.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.5",
  "stable-baselines3>=2.4",
  "tensorboard",
]
build = [
  "pybind11>=3.0",
]

[tool.setuptools]
package-dir = { "" = "python" }
packages = ["diablogym"]
