[project]
name = "diablogym"
version = "0.1.0"
description = "AlphaDiablo: a fast, deterministic Diablo I reinforcement-learning environment built on DevilutionX (headless; raw engine ~13,000x realtime, ~7,500 Gymnasium env.step()/s)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lawrence Grey" }]
keywords = ["reinforcement-learning", "gymnasium", "diablo", "devilutionx", "game-ai"]

dependencies = [
  "numpy>=2.0",
  "gymnasium>=1.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.5",
  "stable-baselines3>=2.4",
  "sb3-contrib>=2.4",  # RecurrentPPO —— evaluate.py 评 LSTM 检查点时需要
  "tensorboard",
  "matplotlib",        # train/plot_figures.py(从本地 runs/ 重生成 README 图)
]
build = [
  "pybind11>=3.0",
]

[tool.setuptools]
package-dir = { "" = "python" }
packages = ["diablogym"]
